--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>PwC ankieta</title>
+    <title>PwC</title>
 
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Caveat|Cuprum|Kalam&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 
     <main>
         <div id="container" class="container hide">
-            <div id="question-container" class="hide">
+            <div id="question-container" class="hide animation-intro">
                 <div id="question" class="question"></div>
                 <div id="boxes-area" class="boxes-area">
                     <button id="box" class="box"></button>
@@ -36,8 +36,8 @@
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Dalej</button>
+            <button id="start-btn" class="start-btn btn animation-intro">Start</button>
+            <button id="next-btn" class="next-btn btn hide animation-intro">Dalej</button>
         </div>
     </main>
 </body>
