test-local-storage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <div id="container" class="container hide">
-            <div id="question-container" class="hide">
+            <div id="question-container" class="hide animation-intro">
                 <div id="question" class="question"></div>
                 <div id="boxes-area" class="boxes-area">
                     <button id="box" class="box"></button>
@@ -36,8 +36,8 @@
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Dalej</button>
+            <button id="start-btn" class="start-btn btn animation-intro">Start</button>
+            <button id="next-btn" class="next-btn btn hide animation-intro">Dalej</button>
         </div>
     </main>
 </body>
