--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Caveat|Cuprum|Kalam&display=swap" rel="stylesheet">
+
     <script defer src="./js/script.js"></script>
 </head>
 
 <body>
+
+
+
     <header>
         <div class="logo-container">
-            <img src="./img/pwc_logo.png" alt="logo" />
+            <img id="img" src="./img/pwc_logo.png" alt="logo" />
+            <span id="hiddenStats">.......</span>
         </div>
     </header>
 
